fixed edge blurry icon

--- a/src/css/_viewer.scss
+++ b/src/css/_viewer.scss
@@ -143,7 +143,7 @@ body {
         .tooltip-icon {
           background-position: center;
           background-repeat: no-repeat;
-          background-size: 90%;
+          background-size: 100%;
           position: relative;
           height: 42px;
           width: 42px;
